submit模块2，bcrypt加密，token拦截器