@@ -8,10 +8,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.RequestBody;
 
+import java.util.regex.Matcher;
+
 import java.io.BufferedWriter;
 import java.io.OutputStreamWriter;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.regex.Pattern;
 
 @Service
 public class SubmitService extends ServiceImpl<SubmitMapper, Submit> {
@@ -22,7 +25,18 @@ public class SubmitService extends ServiceImpl<SubmitMapper, Submit> {
         try {
             Files.write(Paths.get("Main.java"), submit.getCode().getBytes());
 
-            Process compile = Runtime.getRuntime().exec("javac Main.java");
+
+            // Process compile = Runtime.getRuntime().exec("javac Main.java");
+
+            String workDir = System.getProperty("user.dir");
+            Process compile= Runtime.getRuntime().exec(new String[]{
+               "docker","run","--rm","--memory=512m",
+                    "-v",workDir+":/code",
+                    "-w","/code",
+                    "oj-judge","sh","-c","timeout 30 javac Main.java"
+            });
+
+
             compile.waitFor();
             if (compile.exitValue() != 0) {
                 //编译错误
@@ -34,9 +48,18 @@ public class SubmitService extends ServiceImpl<SubmitMapper, Submit> {
             }
             Problem problem= problemService.getById(submit.getProblemId());
 
-            Process run=Runtime.getRuntime().exec("java Main");
+         //   Process run=Runtime.getRuntime().exec("java Main");
+        String memLimit = problem.getMemoryLimit()+"m";
+        int timeoutSec=(problem.getTimeLimit()/1000)+3;
+        Process run=Runtime.getRuntime().exec(new String[]{
+                "docker","run","--rm","--memory="+memLimit,"-i",
+                "-v",workDir+":/code",
+                "-w","/code",
+                "oj-judge","sh","-c",
+                "/usr/bin/time -v timeout "+timeoutSec+" java Main"
+        });
 
-            if(problem.getSampleInput()!=null && !problem.getSampleInput().isEmpty()){
+        if(problem.getSampleInput()!=null && !problem.getSampleInput().isEmpty()){
                 BufferedWriter writer = new BufferedWriter(
                         new OutputStreamWriter(run.getOutputStream()));
                         writer.write(problem.getSampleInput());
@@ -46,6 +69,30 @@ public class SubmitService extends ServiceImpl<SubmitMapper, Submit> {
             run.waitFor();
             String output =new String(run.getInputStream().readAllBytes()).trim();
 
+            //解析cpu时间
+            String timeInfo =new String(run.getErrorStream().readAllBytes());
+
+            double cpuTime=0;
+            double usedMemory=0;
+            Matcher timeMatcher= Pattern.compile("User time \\(seconds\\): ([\\d.]+)").matcher(timeInfo);
+            Matcher memMatcher=Pattern.compile("Maximum resident set size \\(kbytes\\): (\\d+)").matcher(timeInfo);
+
+            if(timeMatcher.find())cpuTime=Double.parseDouble((timeMatcher.group(1)));
+
+            if(memMatcher.find())usedMemory=Double.parseDouble((memMatcher.group(1)));
+
+            if(cpuTime>problem.getTimeLimit()/1000.0){
+                submit.setStatus(4);
+                submit.setResult("Time Limited");
+                updateById(submit);
+                return;
+            }
+            if(usedMemory>problem.getMemoryLimit()*1024L){
+                submit.setStatus(5);
+                submit.setResult("Memory Limited");
+                updateById(submit);
+                return;
+            }
 
             String expected = problem.getSampleOutput().trim();
             if(output.equals(expected)){
